# SamyGo

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker  make  make.sh  package  tv_login.sh
Ambi-Light/: CMakeLists.txt  README.md
Ambi-Light/app/: config.ini
Ambi-Light/debug/: server.py
Ambi-Light/src/: ambi.c  buttons.h  common.c  common.h  externs.h  loader.c
CzTorrentDownloader/: CMakeLists.txt  commons.h  conf.txt  cztorrent.c  cztorrent.h  fonts.c  fonts.h  gui.c  gui.h  loader.c  main.c
CzTorrentDownloader/LIB/: libcom_err.so.2  libcurl.so.4  libgcrypt.so.11.4.4  libgnutls.so.26.4.6  libgpg-error.so.0.3.0  libgssapi_krb5.so.2  libidn.so.11  libk5crypto.so.3  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0.1  liblber-2.4.so.2  libldap_r-2.4.so.2  libnsl.so.1  libsasl2.so.2.0.22  libtasn1.so.3.0.15  libz.so.1
CzTorrentDownloader/font/28/: 0000..007F; Basic Latin.xml  0080..00FF; Latin-1 Supplement.xml  0100..017F; Latin Extended-A.xml  0180..024F; Latin Extended-B.xml  1E00..1EFF; Latin Extended Additional.xml  2C60..2C7F; Latin Extended-C.xml  kernings.xml
NESemu/: CMakeLists.txt  README.md
NESemu/src/: bitvector.h  config.c  config.h  dasm.c  filesystem.c  filesystem.h  filters.c  filters.h  font.c  font.h  global.c  global.h  loader.c  log.h  mapper_info.c  mapper_info.h  nes.c  nes.h  nesemu.c  nespal.c  nespal.h  rom.c  rom.h  sound.c  sound.h  sys.c  sys.h  ui.c  ui.h  utility.c  utility.h  vid.c  vid.h
NESemu/src/M6502/: Codes.h  M6502.c  M6502.h  Tables.h
NESemu/src/mappers/: axrom.c  base.c  camerica.c  gxrom.c  konami2.c  mmc1.c  mmc3.c  nsf.c  vrc6.c  vromswitch.c
SDL_template/: CMakeLists.txt  eventhandling.cpp  eventhandling.h  helloworld1.cpp  main.cpp  nesemu1.cpp  nesemu1.h  texthandler.cpp  texthandler.h
Template/: CMakeLists.txt  README.md
Template/src/: buttons.c  buttons.h  loader.c  log.c  log.h  template.c
ThumbnailsGenerator/: CMakeLists.txt  main.c
VNC-Client/: CMakeLists.txt  README.md
VNC-Client/debug/: example  simple15
VNC-Client/src/: loader.c  scrap.c  scrap.h  viewer.c
VNC-Client/src/rfb/: corre.c  cursor.c  d3des.c  d3des.h  default8x16.h  hextile.c  keysym.h  listen.c  lzoconf.h  lzodefs.h  minilzo.c  minilzo.h  rfb.h  rfbclient.h  rfbconfig.h  rfbproto.c  rfbproto.h  rfbregion.h  rre.c  sockets.c  tight.c  tls.h  tls_none.c  ultra.c  vncauth.c  vncviewer.c  zrle.c  zywrletemplate.c
Virtual-Usb-Emulator/: CMakeLists.txt  README.md
Virtual-Usb-Emulator/src/: main.c
VirtualUsbEmulator/: CMakeLists.txt
include/SDL/: SDL_config.h  begin_code.h
